# DOI-Publishing-API

./: .dockerignore  .env  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  debug.env.example  docker-compose-without-proxy.yml  docker-compose.db.yml  docker-compose.dev.yml  docker-compose.main.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  env.example  pyproject.toml  requirements.txt
app/: auth.py  config.py  db.py  main.py  utils.py
app/api/: approval.py  datacite.py  doi.py  dois.py  external_doi.py  forest3d.py  prefix.py  publish.py  router.py
app/config/: zenodo.json
app/email/: send_email.py  utils.py
app/logic/: __init__.py  auth.py  datacite.py  forest3d.py  mail.py  minter.py  remote_ckan.py
app/logic/external_doi/: constants.py  utils.py  zenodo.py
app/models/: doi.py  validators.py
chart/: Chart.yaml  README.md  values.yaml
chart/templates/: deployment.yaml
nginx/: Dockerfile  nginx.conf
nginx/templates/: doi.conf.template
scripts/: create-doi-db.sql  gen_openapi_json.py  zenodo_import.py
secret/: env.example
tests/: conftest.py  test_doi.py
