[project]
name = "doi-publishing-api"
version = "1.0.2"
description = "API for publishing EnviDat DOIs to DataCite."
authors = [
    {name = "EnviDat", email = "envidat@wsl.ch"},
]
dependencies = [
    "ckanapi>=4.8",
    "envidat-utils==1.4.10",
     # "envidat-converter>=0.2.0", TODO implement and remove envidat-utils
    "fastapi>=0.119.1",
    "pydantic==2.8.0",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
    "tortoise-orm>=0.25.1",
    "python-dotenv>=1.2.1",
    "asyncpg>=0.31.0"
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.scripts]
dev = "uvicorn app.main:app --reload"
lint = "ruff check ."
